Alignment fix

--- a/motorola1/css/main.less
+++ b/motorola1/css/main.less
@@ -501,9 +501,9 @@ td p {
 }
 
 .bottomRow {
-  height: 370px;
+  height: 310px;
   padding-bottom: 0px;
-  margin-bottom: -70px;
+  margin-bottom: -40px;
 }
 
 
